--- a/Frontend/styles/mainStyle.scss
+++ b/Frontend/styles/mainStyle.scss
@@ -14,6 +14,9 @@ main {
   top: 0;
   padding: 10px;
 }
+#pile-card {
+  height: 100px;
+}
 #board-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
