fixed decks of cards locations

--- a/Frontend/styles/mainStyle.css
+++ b/Frontend/styles/mainStyle.css
@@ -27,6 +27,14 @@ main {
   height: 100px;
 }
 
+#Yaniv {
+  margin-left: 100px;
+}
+
+#table-deck-img {
+  height: 100px;
+}
+
 #board-container {
   display: -ms-grid;
   display: grid;
@@ -54,7 +62,6 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border: solid 1px black;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -69,7 +76,6 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 6;
   grid-area: 10 / 4 / 13 / 10;
-  border: solid 1px black;
 }
 
 #player2 {
@@ -80,7 +86,6 @@ main {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: 3 / 1 / 10 / 3;
-  border: solid 1px black;
 }
 
 #player3 {
@@ -91,7 +96,6 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 6;
   grid-area: 1 / 4 / 4 / 10;
-  border: solid 1px black;
 }
 
 #player4 {
@@ -102,6 +106,5 @@ main {
   -ms-grid-column: 11;
   -ms-grid-column-span: 2;
   grid-area: 3 / 11 / 11 / 13;
-  border: solid 1px black;
 }
 /*# sourceMappingURL=mainStyle.css.map */
