quick fix to imgs

--- a/Frontend/styles/mainStyle.scss
+++ b/Frontend/styles/mainStyle.scss
@@ -67,3 +67,9 @@ main {
   display: inline;
   grid-area: 3 / 11 / 11 / 13;
 }
+#player3-deck {
+  transform: rotate(90deg);
+}
+#player2-deck {
+  transform: rotate(90deg);
+}
