--- a/Frontend/styles/style.css
+++ b/Frontend/styles/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #main-title {
@@ -17,15 +18,33 @@ main {
   top: 0;
   padding: 10px;
 }
+
 #table-deck-img {
-  height: 130px;
+  height: 135px;
 }
+
+#yaniv {
+  font-size: 2em;
+  border-radius: 50%;
+  padding-top: 0.9em;
+  padding-bottom: 0.9em;
+  padding-left: 0.1em;
+  padding-right: 0.1em;
+  font-weight: bold;
+  background-color: red;
+  color: white;
+}
+
+#yaniv:hover {
+  cursor: pointer;
+}
+
 #board-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr) [12];
+  -ms-grid-columns: 1fr;
   grid-template-columns: repeat(12, 1fr);
-  -ms-grid-rows: (1fr) [12];
+  -ms-grid-rows: 1fr [12];
   grid-template-rows: repeat(12, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -62,6 +81,8 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 6;
   grid-area: 10 / 4 / 13 / 10;
+  right: 30px;
+  top: 55px;
 }
 
 #player2 {
@@ -72,6 +93,12 @@ main {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: 3 / 1 / 10 / 3;
+  top: 50px;
+}
+
+#player2 img {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 #player3 {
@@ -82,6 +109,12 @@ main {
   -ms-grid-column: 11;
   -ms-grid-column-span: 2;
   grid-area: 3 / 11 / 10 / 13;
+  top: 50px;
+}
+
+#player3 img {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 #player4 {
@@ -92,29 +125,7 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 6;
   grid-area: 1 / 4 / 4 / 10;
-}
-.player-deck {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  top: 10px;
-}
-
-#player1-deck {
-  right: 25px;
+  right: 30px;
   top: 40px;
 }
-#player2-deck {
-  transform: rotate(90deg);
-  top: 50px;
-}
-#player3-deck {
-  transform: rotate(90deg);
-  top: 50px;
-}
-#player4-deck {
-  right: 25px;
-  top: 40px;
-}
-
 /*# sourceMappingURL=style.css.map */
