added remove or add class funciton

--- a/Frontend/styles/style.css
+++ b/Frontend/styles/style.css
@@ -128,4 +128,8 @@ main {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
 }
+
+.marked {
+  opacity: 20%;
+}
 /*# sourceMappingURL=style.css.map */
