--- a/Frontend/styles/style.css
+++ b/Frontend/styles/style.css
@@ -142,8 +142,27 @@ main {
   font-size: 4em;
   background-color: white;
   padding: 20px;
+  text-align: center;
   /* bring your own prefixes */
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+#next-round-button {
+  position: fixed;
+  top: 80%;
+  left: 50%;
+  border: solid 1px black;
+  border-radius: 5px;
+  font-size: 2em;
+  background-color: white;
+  padding: 20px;
+  /* bring your own prefixes */
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#next-round-buttonhover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
