--- a/Frontend/styles/style.scss
+++ b/Frontend/styles/style.scss
@@ -122,3 +122,30 @@ main {
 .marked {
   opacity: 20%;
 }
+#round-victory {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border: solid 1px black;
+  border-radius: 5px;
+  font-size: 4em;
+  background-color: white;
+  padding: 20px;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+#next-round-button {
+  position: fixed;
+  top: 80%;
+  left: 50%;
+  border: solid 1px black;
+  border-radius: 5px;
+  font-size: 2em;
+  background-color: white;
+  padding: 20px;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+  &hover {
+    cursor: pointer;
+  }
+}
