fixed next round event listener

--- a/Frontend/styles/style.css
+++ b/Frontend/styles/style.css
@@ -147,7 +147,7 @@ main {
           transform: translate(-50%, -50%);
 }
 
-#next-round-button {
+#next-round {
   position: fixed;
   top: 80%;
   left: 50%;
@@ -161,7 +161,7 @@ main {
           transform: translate(-50%, -50%);
 }
 
-#next-round-buttonhover {
+#next-roundhover {
   cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
