--- a/Frontend/styles/style.scss
+++ b/Frontend/styles/style.scss
@@ -134,7 +134,7 @@ main {
   /* bring your own prefixes */
   transform: translate(-50%, -50%);
 }
-#next-round-button {
+#next-round {
   position: fixed;
   top: 80%;
   left: 50%;
