--- a/Frontend/styles/style.scss
+++ b/Frontend/styles/style.scss
@@ -105,6 +105,7 @@ main {
   grid-area: 1 / 4 / 4 / 10;
   right: 30px;
   top: 40px;
+  transform: rotate(180deg);
 }
 #player4 {
   text-align: center;
